flux/apps/wailord/home-automation/esphome/app/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    tailscale.com/proxy-class: "jscknet"
  name: esphome-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: esphome
      http:
        paths:
          - backend:
              service:
                name: esphome-main
                port:
                  number: 6052
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - esphome
      secretName: esphome.local-tls
